# gengaming

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  deploy.yml  web-ci.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
src/backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  tsconfig.json
src/backend/api/: __init__.py  auth.py  config.py  dependencies.py  main.py  middleware.py
src/backend/api/routes/: __init__.py  control.py  generation.py  status.py  websocket.py
src/backend/api/schemas/: __init__.py  control.py  generation.py  status.py
src/backend/api/security/: __init__.py  jwt.py  rbac.py
src/backend/core/: __init__.py  config.py  exceptions.py  logging.py  metrics.py
src/backend/db/: __init__.py  base.py  session.py
src/backend/db/migrations/: __init__.py  env.py
src/backend/db/models/: __init__.py  control.py  generation.py  user.py  video.py
src/backend/models/: __init__.py
src/backend/models/instructnet/: __init__.py  config.py  control.py  fusion.py  modification.py
src/backend/models/msdit/: __init__.py  attention.py  config.py  spatial.py  temporal.py  transformer.py
src/backend/models/vae/: __init__.py  config.py  decoder.py  encoder.py  spatial.py  temporal.py
src/backend/scripts/: __init__.py  benchmark.py  export_models.py  train_instructnet.py  train_msdit.py  train_vae.py
src/backend/services/: __init__.py  cache.py  control.py  generation.py  monitoring.py  storage.py  video.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/test_api/: __init__.py  test_control.py  test_generation.py  test_websocket.py
src/backend/tests/test_models/: __init__.py  test_instructnet.py  test_msdit.py  test_vae.py
src/backend/tests/test_services/: __init__.py  test_control.py  test_generation.py  test_video.py
src/backend/utils/: __init__.py  freebsd.py  gpu.py  metrics.py  validation.py  video.py
src/web/: README.md  (+8 more)
(+117 files in other folders)
