[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gamegen-x-backend"
version = "0.1.0"
description = "GameGen-X backend service for real-time game video generation and control on FreeBSD-based Orbis OS"
authors = ["GameGen-X Team"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gamegen-x/backend"
keywords = ["game-generation", "ml", "freebsd", "orbis-os"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: FreeBSD",
    "Framework :: FastAPI",
    "Intended Audience :: Developers", 
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
torch = "^2.0.0"
numpy = "^1.23.0"
transformers = "^4.0.0"
einops = "^0.6.0"
h5py = "^3.8.0"
wandb = "^0.15.0"
opencv-python = "^4.7.0"
torchvision = "^0.15.0"
pydantic = "^1.10.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
sqlalchemy = "^1.4.0"
alembic = "^1.9.0"
psycopg2-binary = "^2.9.0"
redis = "^4.5.0"
prometheus-client = "^0.16.0"
python-multipart = "^0.0.6"
uvicorn = "^0.21.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
ruff = "^0.0.270"
bandit = "^1.7.5"
safety = "^2.3.5"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "N", "UP", "S", "BLE", "FBT", "C4", "T20", "PT", "RET", "SIM"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.3"
addopts = "-ra -q --cov=gamegen_x_backend"
testpaths = ["tests"]
asyncio_mode = "auto"